--- a/WebPage.css
+++ b/WebPage.css
@@ -1,31 +1,189 @@
-h1{
-    padding-right: 20px;
-    padding-left: 15px;
+*{
+    box-sizing: border-box;
+    margin:auto 0;
+    padding: 0;
+    }
+
+body{
+    display:flex;
+    flex-direction: column;
+    min-height: 100px;
+    background: peachpuff;
+    color: gray;
+    font-family: 'Fira sans',sans-serif;
 }
-.Save{
-    margin-right: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    background-color:lightblue;
-    border-radius: 15px;
-    width: 70px;
-    height: 30px;
+header{
+    padding:2rem 1rem;
+    max-width:500px;
+    width:100%;
+    margin: 0 auto;
+}
+header h1{
+    font-size: 2.5rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+    padding-left: 0;
+}
+
+#task-form{
+    display: flex;
+    margin-right: 0;
     
 }
-.Edit{
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: center;
-    background-color:lightblue;
-    border-radius: 15px;
-    width: 70px;
-    height: 30px;
+input,button{
+    appearance: none;
+    border:none;
+    outline: none;
+    background: none;
 }
-.border-wall{
-    border-style: solid;
-    border-width: 2px;
-    text-align: center;
+#task-input{
+    flex:1 1 0%;
+    background-color: darkgrey;
+    padding:1rem;
+    border-radius:1rem;
+    color: darkcyan;
+    font-size: 1.25rem;
 }
-.list{
+#task-input::placeholder{
+    color: aquamarine;
+}
+#submit-input{
+    color: black;
+    font-size: 1.25rem;
+    font-weight: 500;
+    cursor:pointer;
+    transition:0.4s;
+    
+}
+#submit-input:hover{
+opacity:0.6;
+}
+#submit-input:active{
+    opacity:0.8;
+}
+main{
+    display:flex;
+    flex-direction: column;
+    display: inline-flex;
+    min-height: 100px;
+    background: peachpuff;
+    color: gray;
+    flex:1 1 0%;
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto;
+    
+    
+   
+}
+
+.task-list{
+    padding:1rem;
+    
+    
+}
+.task-list h2{
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: gray;
+    margin-bottom: 1rem;
+    
+}
+#tasks .task {
+    display:flex;
+    justify-content: space-between;
+    background-color: lightgreen;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    color:blueviolet;
+    
+}
+
+#tasks .task .content .text{
+    color: blueviolet;
+    font-size: 1.125rem;
+    width: 100%;
+    display:block;
+    transition:0.4s;
+
+}
+
+#tasks .task .content .text:not(:read-only){
+
+color: black;
+
+}
+
+#tasks .task .action{
+    display:flex;
+    margin:0,-0.5rem;
+}
+
+.task .action button{
+    cursor:pointer;
+    margin:0rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.4s;
+}
+
+.task .action button:hover{
+    opacity:0.6;
+    }
+.task .action button:active{
+    opacity:0.8;
+}
+.task .action .edit{
+    color:purple;
+}
+.task .action .X{
+    padding-left: 20px;
+    color:darkred;
+}
+
+h3{
     text-align: center;
+    color: green;
+    text-decoration: underline;
+    
+}
+
+.complete-border{
+    border: solid;
+    border-color: burlywood;
+    min-width: 470px;
+    align-items: center;
+    flex-direction: column;
+    height: 500px;
+    position: fixed;
+    margin-top: 100px;
+   
+}
+.complete-task{
+    text-align: center;
+    flex-direction: column;
+    position: fixed;
+    margin-top: 100px;
+    margin-right: 100px;
+
+}
+#c-tasks .task{
+    display:flex;
+    justify-content: space-between;
+    background-color: lightgreen;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    color:blueviolet;
+    
+}
+#c-tasks .task .content .text{
+    color: blueviolet;
+    font-size: 1.125rem;
+    width: 100%;
+    display:block;
+    transition:0.4s;
+
 }
