--- a/MyWebsite/WebPage.css
+++ b/MyWebsite/WebPage.css
@@ -189,7 +189,7 @@ h3{ /*Title: Completed*/
     text-align: center;
     color: green;
     text-decoration: underline;
-    font-family: 'Pencil','Courier New', Courier, monospace;
+    font-family: 'Pencil','Courier New';
     font-size: 30px;
 }
 
