--- a/MyWebsite/WebPage.css
+++ b/MyWebsite/WebPage.css
@@ -145,9 +145,10 @@ font-size: large;
 }
 
 #tasks .task .action{
-    display:flex;
+    display:inline-flex;
     margin:0,-0.5rem;
     transition: 0.4s;
+
 }
 
 .task .action img{
@@ -194,7 +195,7 @@ font-size: large;
 .task .action .X{
     margin-bottom: 5px;
     padding-left: 20px;
- 
+    margin-right: 15px;
 }
 
 h3{ /*Title: Completed*/
