color task update

--- a/MyWebsite/WebPage.css
+++ b/MyWebsite/WebPage.css
@@ -10,8 +10,6 @@
 body{
     display:flex;
     flex-direction: column;
-    /* max-height: 100%;
-    max-width:100%; */
     background: rgb(245, 243, 156);
     color: black;
     font-family: 'Pencil', sans-serif;
@@ -43,22 +41,25 @@ header h1{
 #task-form{
     display: flex;
     margin-right: 0;
+    margin-bottom: 0;
     
 }
-input,button{
+input{
     appearance: none;
     border:none;
     outline: none;
     background: none;
+   
 }
 
 
 #task-input{
     flex:1 1 0%;
-    margin-top:40px; 
+    margin-top:10px; 
     font-size: 1.25rem;
     font-family:'Pencil','Courier New';
     font-size:25px;
+    
     /* border: solid; */
 }
 #task-input::placeholder{
@@ -72,8 +73,6 @@ input,button{
     cursor:pointer;
     transition:0.4s;
     margin-top: 30px;
-
-  
     nav-left: 20px;
     /* border: solid; */
     
@@ -92,17 +91,80 @@ main{
     min-height: 100px;
     color: gray;
     flex:1 1 0%;
-    max-width: 500px;
+    max-width: 550px;
     width: 100%;
     margin: 0 auto;
     vertical-align: baseline;
    
-   
 }
 
+.colourbutton {
+    border: solid;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 1px;
+    margin-left: 30px;
+    background-color: red;
+    box-shadow: 0px 0px;
+    margin-bottom: 5px;
+    align-items: center;
+}
+.colourbutton:hover{
+    cursor: pointer;
+    opacity:0.9;
+    transition:0.4s;
+    
+}
+.colourbutton:active{
+    opacity:0.8;
+    border: inset;
+}
+.colourbutton2 {
+    border: solid;
+    box-shadow: 0px 0px;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 1px;
+    margin-left: 0px;
+    background-color: orange;
+    margin-bottom: 5px;
+}
+.colourbutton2:hover{
+    cursor: pointer;
+    opacity:1;
+    transition:0.4s;
+    
+}
+.colourbutton2:active{
+    opacity:0.8;
+    border: inset;
+}
+.colourbutton3 {
+    border: solid;
+    box-shadow: 0px 0px;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 2px;
+    margin-left: 0px;
+    background-color: aqua;
+    margin-bottom: 5px;
+}
+.colourbutton3:hover{
+    cursor: pointer;
+    opacity:0.9;
+    transition:0.4s;
+    
+}
+.colourbutton3:active{
+    opacity:0.8;
+    border: inset;
+}
+.date{
+    margin-left:10px;
+}
 .task-list{
     padding:1rem;
-
+    
 }
 .task-list h2{
     font-size: 1.5rem;
@@ -113,28 +175,29 @@ main{
 }
 #tasks .task {
     display:flex;
-    justify-content: space-evenly;
     /* background-color: honeydew; */
-    padding: 2px;
+    /* padding: 2px; */
     border-radius: 1rem;
-    /* border: solid; */
+    border: solid;
     color:rgb(12, 9, 9);
     margin-top: 25px;
     margin-bottom: 28px;
-    
-}
+    padding-left: 2px;
+    margin-left: 100px;
 
+}
 #tasks .task .content .text{
     color: rgb(79, 77, 77);
     font-size: 30px;
-    max-width: 120%;
-    display:inline-block;
+    display:flex;
     transition:0.4s;
     font-family:'Pencil','Courier New';
-    margin-right: 20px;
-    /* border: solid; */
+    max-width: fit-content;
+    
+  
     
 } 
+
 
 
 #tasks .task .content .text:not(:read-only){
@@ -144,31 +207,17 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: large;
 
 }
+
+
 #tasks .task .content{
     justify-content: space-evenly;
+    
 }
 #tasks .task .action{
     display:inline-flex;
     transition: 0.4s;
-    justify-content: space-evenly;
     margin-left: 10px;
 }
-
-.task .action img{
-    cursor:pointer;
-    margin:0rem;
-    font-size: 1.125rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: 0.4s;
-}
-
-/* .task .action img:hover{
-    opacity:0.6;
-    }
-.task .action img:active{
-    opacity:0.8;
-} */
 
 /*Icon Buttons*/
 .task .action .edit:hover{
@@ -193,14 +242,146 @@ font-size: large;
 }
 .task .action .edit{
     margin-bottom: 5px;
-    margin-left: 5px;
+    margin-left: 10px;
+    padding-left: 5px;
    
 }
 
 .task .action .X{
     margin-bottom: 5px;
-    padding-left: 20px;
-    margin-right: 15px;
+    padding-left: 5px;
+    
+}
+
+/* task1 (task w/o dates)*/
+.T1colourbutton {
+    border: solid;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 1px;
+    margin-left: 195px;
+    background-color: red;
+    box-shadow: 0px 0px;
+    margin-bottom: 5px;
+    align-items: center;
+}
+.T1colourbutton:hover{
+    cursor: pointer;
+    opacity:0.9;
+    transition:0.4s;
+    
+}
+.T1colourbutton:active{
+    opacity:0.8;
+    border: inset;
+}
+.T1colourbutton2 {
+    border: solid;
+    box-shadow: 0px 0px;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 1px;
+    margin-left: 0px;
+    background-color: orange;
+    margin-bottom: 5px;
+}
+.T1colourbutton2:hover{
+    cursor: pointer;
+    opacity:1;
+    transition:0.4s;
+    
+}
+.T1colourbutton2:active{
+    opacity:0.8;
+    border: inset;
+}
+.T1colourbutton3 {
+    border: solid;
+    box-shadow: 0px 0px;
+    border-radius: 5px;
+    padding-right:10px;
+    margin-right: 2px;
+    margin-left: 0px;
+    background-color: aqua;
+    margin-bottom: 5px;
+}
+.T1colourbutton3:hover{
+    cursor: pointer;
+    opacity:0.9;
+    transition:0.4s;
+    
+}
+.T1colourbutton3:active{
+    opacity:0.8;
+    border: inset;
+}
+#tasks .task1 {
+    display:flex;
+    /* background-color: honeydew; */
+    border-radius: 1rem;
+    border: solid;
+    color:rgb(12, 9, 9);
+    margin-top: 25px;
+    margin-bottom: 28px;
+    max-width: 430px;
+    padding-left: 2px;
+/* 
+    max-width: 400px;*/
+    margin-left: 100px; 
+}
+#tasks .task1 .action{
+    display:inline-flex;
+    transition: 0.4s;
+    margin-left: 10px;
+}
+#tasks .task1 .content .text{
+    color: rgb(79, 77, 77);
+    font-size: 30px;
+    display: flex;
+    transition:0.4s;
+    font-family:'Pencil','Courier New';
+    max-width: 200px;
+    
+
+}
+#tasks .task1 .content .text:not(:read-only){
+
+color: black;
+font-family: Arial, Helvetica, sans-serif;
+font-size: large;
+
+}
+.task1 .action .edit:hover{
+    opacity:0.6;
+    
+}
+.task1 .action .edit:active{
+    opacity:0.8;
+    
+}
+
+
+.task1 .action .X:hover{
+    
+    opacity:0.6;
+    
+}
+.task1 .action .X:active{
+
+    opacity:0.8;
+ 
+}
+.task1 .action .edit{
+    margin-bottom: 5px;
+    margin-left: 10px;
+    padding-left: 5px;
+   
+}
+
+.task1 .action .X{
+    margin-bottom: 5px;
+    
+    
 }
 
 h3{ /*Title: Completed*/
@@ -213,6 +394,7 @@ h3{ /*Title: Completed*/
 
 .complete{
     box-shadow:100px,20px;
+    
 }  
 .complete-border{
     border: solid;
@@ -226,6 +408,7 @@ h3{ /*Title: Completed*/
     position: fixed;
     margin-top: 100px;
     box-shadow: 20px,20px, 1000px;
+    margin-left:100px;
    
 }
 
@@ -241,6 +424,26 @@ h3{ /*Title: Completed*/
     
 }
 #c-tasks .task .content .text{
+    color: black;
+    font-size: 2rem;
+    font-family: 'Pencil', sans-serif;
+    width: 100%;
+    display:block;
+    transition:0.4s;
+   
+}
+#c-tasks .task1{
+    display:flex;
+    justify-content: space-between;
+    background-color: lightgreen;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    color:black;
+    margin:10px;
+    
+}
+#c-tasks .task1 .content .text{
     color: black;
     font-size: 2rem;
     font-family: 'Pencil', sans-serif;
