--- a/MyWebsite/WebPage.css
+++ b/MyWebsite/WebPage.css
@@ -36,6 +36,7 @@ header h1{
     font-weight: 300;
     margin-top: 50px;
     padding-left: 0;
+    font-family: 'Pencil', sans-serif;
 }
 
 #task-form{
