--- a/MyWebsite/WebPage.css
+++ b/MyWebsite/WebPage.css
@@ -261,12 +261,14 @@ font-size: large;
     border: solid;
     border-radius: 5px;
     padding-right:10px;
-    margin-right: 1px;
-    margin-left: 158px;
+    /* padding-left: 1px; */
+    margin-right: 0px;
+    margin-left: 157px;
     background-color: red;
     box-shadow: 0px 0px;
     margin-bottom: 5px;
     align-items: center;
+    padding-bottom: 10px;
 }
 .T1colourbutton:hover{
     cursor: pointer;
@@ -283,8 +285,8 @@ font-size: large;
     box-shadow: 0px 0px;
     border-radius: 5px;
     padding-right:10px;
-    margin-right: 1px;
-    margin-left: 0px;
+    margin-right: 0px;
+    margin-left: 1px;
     background-color: orange;
     margin-bottom: 5px;
 }
@@ -304,9 +306,10 @@ font-size: large;
     border-radius: 5px;
     padding-right:10px;
     margin-right: 2px;
-    margin-left: 0px;
+    margin-left: 1px;
     background-color: aqua;
     margin-bottom: 5px;
+    /* padding-bottom: 5px; */
 }
 .T1colourbutton3:hover{
     cursor: pointer;
