--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -1,12 +1,184 @@
-title{
-    display:flex;
-   flex-direction: column;
-   display: inline-flex;
-   min-height: 100px;
-   color: gray;
-   flex:1 1 0%;
-   max-width: 550px;
-   width: 100%;
-   margin: 0 auto;
-   vertical-align: baseline;
+*{
+    font-size: 18px;
+  }
+  
+  ul li{
+    margin-top: 15px;
+  }
+  /* nav styles */
+    nav {
+      display: flex;
+      padding: 2% 6%;
+      justify-content: space-between;
+      align-items: center;
+    }
+      
+    .navLinks{
+      flex: 1;
+      text-align: right;
+    }
+      
+    .navLinks ul li {
+      list-style: none;
+      display: inline-block;
+      padding: 8px 12px;
+      position: relative;  
+    }
+      
+    .navLinks ul li a {
+      color: rgb(0, 0, 0);
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: bold;
+    }
+      
+    .navLinks ul li::after {
+      content: '';
+      width: 0%;
+      height: 2px;
+      background: aqua;
+      display: block;
+      margin: auto;
+      transition: 0.5s;
+    }
+      
+    .navLinks ul li:hover::after {
+      width: 100%;
+    }
+  
+    nav .fa{
+      display: none;
+  }
+  
+  .navLinks button { /*Sign up button*/
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    border: rgb(0, 200, 255);
+    padding: 12px 34px;
+    margin-left: 30px;
+    background: lightblue;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .navLinks button:hover {
+    border: 1px solid blue;
+    background: aqua;
+    transition: 0.5s;
+  }
+  
+  @media (max-width:700px) {
+    .navLinks ul li {
+      display: block;
+      color: white;
+    }
+  
+    .navLinks ul {
+      flex-direction: column; /* Display links vertically */
+  
+    }   
+    .navLinks{
+      position: absolute;
+      background: rgb(44, 109, 231);
+      height: 100vh;
+      width: 200px;
+      top: 0;
+      display: none;
+      text-align:left;
+      z-index: 2;
+      transition: 1s;
+    }
+    nav .fa{
+      display: block;
+      color: #000000;
+      margin: 10px;
+      font-size: 22px;
+      cursor: pointer;
+    }
+  
+    .navLinks ul{
+      padding: 15px;
+  
+    }
+  
+    .navLinks ul li a{
+      color: white;
+    }
+  
+    *{
+      font-size: 1em;
+    }
+  
+    .navLinks button{
+      margin-top: 20px;
+    }
+
+    
+
+
 }
+/* Code down here is for the footer*/
+.footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #D3D3D3; /* Change this to the background color you want */
+      color: #fff; /* Change this to the text color you want */
+      text-align: center;
+      border: top width 20px;
+      
+  }
+  
+  .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #fff;
+  }
+  
+  .footer img {
+      margin-bottom: 10px; /* Add some margin to the logo to separate it from the links */
+  }
+  
+  .footer nav ul {
+      align-items:center;
+      padding: 0;
+      color: #fff;
+  }
+  
+  .footer nav ul li {
+      display: inline-flex;
+      margin-right: 10px; /* Add some spacing between the links */
+      color: #fff;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh; /* Set a minimum height to ensure the footer stays at the bottom */
+    display: flex;
+    flex-direction: column;
+}
+.navLinks2{
+  flex: 1;
+  text-align: center;
+}
+.navLinks2 ul li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/* .navLinks2 ul li::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: aqua;
+  display: inline-block;
+  transition: 0.5s;
+} */
+
+/* End footer*/
+  
