--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -120,7 +120,7 @@
 }
 /* Code down here is for the footer*/
 .footer {
-      position: absolute;
+      position: relative;
       bottom: 0;
       left: 0;
       width: 100%;
