--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -5,6 +5,134 @@
   ul li{
     margin-top: 15px;
   }
+  /*Pop up sign in*/
+  .popup{
+    background: rgba(0, 0,0,0.6);
+    backdrop-filter: blur(3px);
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+  .popup-content{
+    height: 250px;
+    width: 500px;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+  }
+  input{
+    margin: 20px auto;
+    display: block;
+    width: 50%;
+    padding: 8px;
+    border: 1px solid gray;
+  }
+  #Login{ 
+    position: absolute;
+    background: white;
+    padding: 10px 50px;
+    color: black;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 18px;
+    border-radius: 5px;
+    box-shadow: 0px 0px;
+    margin-top: 10px;
+    text-decoration: none;
+    transition: 0.4s;
+    bottom: 25px; 
+    right: 20px;
+    
+  }
+  #Login:hover{
+    background-color: lightblue;
+  }
+  .close{
+    position: absolute;
+    background-color: #fff;
+    top: -15px;
+    right: -15px;
+    border-radius: 50%;
+    box-shadow: 6px 2px 29px 4px rgba(0, 0,0,0.75);
+    cursor: pointer;
+  }
+  .close:hover{
+    background: red;
+  }
+  /********************************************/
+  /* flex tables */
+.flex1{
+  display: flex;
+  background-color: rgb(255, 255, 255);
+}
+
+.flex1 > div {
+  background-color: #ffffff;
+  margin: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+
+.flex2{
+  display: flex;
+  background-color: rgb(255, 255, 255);
+}
+
+.flex2 > div {
+  background-color: #ffffff;
+  margin: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+
+.flex3{
+  display: flex;
+  background-color: rgb(255, 255, 255);
+}
+
+.flex3 > div {
+  background-color: #ffffff;
+  margin: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+
+.flex4{
+  display: flex;
+  background-color: rgb(255, 255, 255);
+}
+
+.flex4 > div {
+  background-color: #ffffff;
+  margin: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+/*********/
+
+
+/*Circles*/
+.why_us_circles {
+  display:inline;
+  margin-bottom:10px;
+} 
+.why_us_circles > * {
+  display: inline;
+  margin: 20px;
+  border-radius: 20px;
+  padding:8px;
+  background-color:aqua;
+  width:fit-content;
+}
+/*************/
+
+
+
   /* nav styles */
     nav {
       display: flex;
@@ -55,7 +183,7 @@
     text-decoration: none;
     color: rgb(0, 0, 0);
     border: rgb(0, 200, 255);
-    padding: 12px 34px;
+    padding: 10px 35px;
     margin-left: 30px;
     background: lightblue;
     position: relative;
@@ -113,35 +241,39 @@
     .navLinks button{
       margin-top: 20px;
     }
-
-    
-
-
 }
 /* Code down here is for the footer*/
 .footer {
-      position: relative;
+      position:relative;
+      border-top-width:thin;
       bottom: 0;
       left: 0;
       width: 100%;
       background-color: #D3D3D3; /* Change this to the background color you want */
       color: #fff; /* Change this to the text color you want */
       text-align: center;
-      border: top width 20px;
+      margin-top: 10px;
+      
       
   }
   
   .footer-content {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      padding-top: 5px;
+      padding-bottom:5px;
+      /* justify-content: space-between; */
+      align-items:center;
       color: #fff;
   }
   
   .footer img {
-      margin-bottom: 10px; /* Add some margin to the logo to separate it from the links */
+      /* margin-bottom: 10px; Add some margin to the logo to separate it from the links */
+      align-items:center;
   }
+  .footer .logo{
+    align-items:center;
   
+  }
   .footer nav ul {
       align-items:center;
       padding: 0;
@@ -149,10 +281,12 @@
   }
   
   .footer nav ul li {
+  
       display: inline-flex;
-      margin-right: 10px; /* Add some spacing between the links */
+      margin-right: 100px; /* Add some spacing between the links */
       color: #fff;
   }
+    
   body {
     margin: 0;
     padding: 0;
@@ -164,21 +298,112 @@
   flex: 1;
   text-align: center;
 }
-.navLinks2 ul li a {
+.footer nav ul li a {
   color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 14px;
   font-weight: bold;
 }
-
-/* .navLinks2 ul li::after {
+.footer nav ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;  
+}
+  
+.footer nav ul li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+}
+  
+.footer nav ul li::after {
   content: '';
   width: 0%;
   height: 2px;
   background: aqua;
-  display: inline-block;
+  display: flex;
+  margin: auto;
   transition: 0.5s;
-} */
-
+}
+.footer nav ul li:hover::after {
+  width: 100%;
+}
 /* End footer*/
-  
+
+
+/*ABOUT US PAGE*/
+.container{
+  text-align: center;
+}
+
+ .header{
+  padding-top: 5px;
+  color: #000000;
+  font-size: 30px;
+  /* line-height: 50px; */
+}
+
+.sub-container{
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.teams{
+  margin: 10px;
+  padding: 22px;
+  max-width: 30%;
+  cursor: pointer;
+  transition: 0.4s;
+  box-sizing: border-box;
+}
+
+.teams:hover{
+  background: #ddd;
+  border-radius: 12px;
+}
+
+.teams img{
+  width: 200px;
+  height: 200px;
+
+}
+
+.name{
+  padding: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.desig{
+  font-style: italic;
+  color: #888;
+}
+
+.about{
+  margin: 20px 0;
+  font-weight: lighter;
+  color: #1e1c1c;
+}
+
+.social-links{
+  margin: 14px;
+}
+
+.social-links a{
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  transition: .4s;
+}
+
+.social-links a:hover{
+  transform: scale(1.5);
+
+} 
