--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -407,3 +407,30 @@
   transform: scale(1.5);
 
 } 
+
+
+
+/**********EXERCISE PAGE*****************/
+
+
+.body-image{
+  display:grid;
+  margin-left:auto;
+  margin-right: auto;
+  width: 450px;
+  height: 450px;
+  
+  }
+  
+  #box{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top:200px; /*y coord*/
+    left:430px; /*x coord*/
+    background-color: red;
+  }
+  
+  #arms,#legs,#torso,#back{
+    height: 700px;
+  }
