--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -422,15 +422,32 @@
   
   }
   
-  #box{
+  /* #box{
     width: 50px;
     height: 50px;
     position: absolute;
-    top:200px; /*y coord*/
-    left:430px; /*x coord*/
+    top:200px; 
+    left:430px; 
     background-color: red;
   }
   
   #arms,#legs,#torso,#back{
     height: 700px;
+  } */
+  .overlay {
+    position: fixed;
+    top:250px;
+    left:813px;
+    width:80px;
+    height: 150px;
+    background: blue; /* Transparent green background */
+    opacity: 0.5;
+    transition: opacity 0.3s ease; /* Add a smooth transition effect */
+    
+  }
+  
+  .overlay:hover {
+    background: green;
+    opacity: 0.7;
+    
   }
