--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -434,20 +434,222 @@
   #arms,#legs,#torso,#back{
     height: 700px;
   } */
-  .overlay {
-    position: fixed;
-    top:250px;
-    left:813px;
-    width:80px;
-    height: 150px;
-    background: blue; /* Transparent green background */
-    opacity: 0.5;
-    transition: opacity 0.3s ease; /* Add a smooth transition effect */
-    
-  }
-  
-  .overlay:hover {
-    background: green;
-    opacity: 0.7;
-    
-  }
+  /**/
+.overlaytorso {
+  position: absolute;
+  top:250px;
+  left:813px;
+  width:80px;
+  height: 150px;
+ 
+}
+
+.overlaytorso:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+.overlaytorso:hover:after{
+  pointer-events: none;
+}
+
+
+/**/
+.overlayleftarm1 {
+  position: absolute;
+  top:250px;
+  left:770px;
+  width:35px;
+  height: 150px;
+  rotate:10deg;
+
+}
+
+.overlayleftarm1:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+
+  pointer-events: none;
+}
+
+.overlayleftarm1:hover:after{
+
+  pointer-events: none;
+}
+
+/**/
+.overlayrightarm1 {
+  position: absolute;
+  top:250px;
+  left:898px;
+  width:35px;
+  height: 150px;
+  rotate:165deg;
+ 
+}
+
+.overlayrightarm1:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+ 
+  pointer-events: none;
+}
+
+.overlayrightarm1:hover:after{
+
+  pointer-events: none;
+}
+/**/
+.overlayleftleg1 {
+  position: absolute;
+  top:390px;
+  left:805px;
+  width:45px;
+  height: 180px;
+}
+
+.overlayleftleg1:hover {
+  background: green;
+  opacity: 0.4;
+  pointer-events: none;
+}
+
+.overlayleftleg1:hover:after{
+
+  pointer-events: none;
+}
+/**/
+#overlayrightleg1 {
+  position: absolute;
+  top:390px;
+  left:855px;
+
+  width:45px;
+  height: 180px;
+ 
+}
+
+#overlayrightleg1:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+ 
+  pointer-events: none;
+}
+
+#overlayrightleg1:hover:after{
+
+  pointer-events: none;
+}
+/**/
+#overlayleftarm2 {
+  position: absolute;
+  top:250px;
+  left:972px;
+  rotate:12deg;
+  width:35px;
+  height: 180px;
+
+}
+
+#overlayleftarm2:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+#overlayleftarm2:hover:after{
+  pointer-events: none;
+}
+/**/
+#overlayrightarm2 {
+  position: absolute;
+  top:250px;
+  left:1090px;
+  rotate: 165deg;
+  width:35px;
+  height: 150px;
+
+}
+
+#overlayrightarm2:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+ 
+  pointer-events: none;
+}
+
+#overlayrightarm2:hover:after{
+
+  pointer-events: none;
+}
+/**/
+#overlayback {
+  position: absolute;
+  top:250px;
+  left:1010px;
+  width:80px;
+  height: 150px;
+;
+}
+
+#overlayback:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+#overlayback:hover:after{
+  pointer-events: none;
+}
+/**/
+#overlayleftleg2 {
+  position: absolute;
+  top:390px;
+  left:1008px;
+  width:45px;
+  height: 180px;
+
+}
+
+#overlayleftleg2:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+ 
+  pointer-events: none;
+}
+
+#overlayleftleg2:hover:after{
+
+  pointer-events: none;
+}
+/**/
+#overlayrightleg2 {
+  position: absolute;
+  top:390px;
+  left:1050px;
+  width:45px;
+  height: 180px;
+
+}
+
+#overlayrightleg2:hover {
+  background: green;
+  opacity: 0.4;
+  cursor: pointer;
+ 
+  pointer-events: none;
+}
+
+#overlayrightleg2:hover:after{
+
+  pointer-events: none;
+}
