--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -681,9 +681,11 @@
 }
 .exercise-content{
   justify-content: center; /* Center along the horizontal axis */
-    align-items: center; 
+  align-items: center; 
 }
-
+.arm-exercises,.leg-exercises,.torso-exercises,.back-exercises{
+  text-align: left;
+}
 #arms,#legs,#torso,#back {
   background-color: #f4f4f4;
   padding: 20px;
