--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -180,6 +180,7 @@
   
   .navLinks button { /*Sign up button*/
     display: inline-block;
+
     text-decoration: none;
     color: rgb(0, 0, 0);
     border: rgb(0, 200, 255);
@@ -290,8 +291,8 @@
   body {
     margin: 0;
     padding: 0;
-    min-height: 100vh; /* Set a minimum height to ensure the footer stays at the bottom */
-    display: flex;
+    min-height: 100vh; 
+    display:flex;
     flex-direction: column;
     align-items: center;
 }
@@ -340,6 +341,8 @@
 }
 
  .header{
+  display: flex;
+  flex-direction: row;
   padding-top: 5px;
   color: #000000;
   font-size: 30px;
@@ -687,12 +690,19 @@
   text-align: left;
 }
 #arms,#legs,#torso,#back {
+  display: block;
   background-color: #f4f4f4;
   padding: 20px;
   margin: 10px;
   border-radius: 8px;
-  width: 300px;
+  position:relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  width: 350px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  text-align: center;
   
  
 }
@@ -700,8 +710,11 @@
   font-size: larger;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
+  align-items: center;
 }
-
+.description{
+  text-align: center;
+}
 /*selection animation*/
 .highlighted {
   animation: blink 1s; 
