--- a/HealthWeb/Health.css
+++ b/HealthWeb/Health.css
@@ -142,6 +142,7 @@
     }
       
     .navLinks{
+      position: relative;
       flex: 1;
       text-align: right;
     }
@@ -161,6 +162,7 @@
     }
       
     .navLinks ul li::after {
+      position: absolute;
       content: '';
       width: 0%;
       height: 2px;
@@ -341,11 +343,13 @@
 }
 
  .header{
-  display: flex;
+  position: relative;
+  display: block;
   flex-direction: row;
   padding-top: 5px;
   color: #000000;
   font-size: 30px;
+  width: 100%;
   /* line-height: 50px; */
 }
 
