--- a/HealthWeb/Health2.css
+++ b/HealthWeb/Health2.css
@@ -25,163 +25,8 @@
     border-radius: 5px;
     position: relative;
   }
-
-p{
-
-    font-size: .75em;
-    font-weight: bold;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-}
-
-.progress-bar{
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-.progress{
-    position: relative;
-    width:45%;
-    height: 80%;
-    background: lightgray;
-    border-radius: 5px;
-    overflow: hidden;
-    margin-top: 30px;
-    
-}
-
-/* js will adjust the color and width of this as the user inputs calories */
-.progress__fill{
-    width: 0%;
-    background: red;
-    color: rgb(195, 255, 0);
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.progress__text{
-    position: absolute;
-    top: 50%;
-    right: 5px;
-    transform: translateY(-50%);
-    font: bolder 20px'Quicksand';
-    color: black;
-}
-
-.content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* align-items: center; */
-    margin: auto;
-    flex: 1;
-    margin-bottom: 200px;
-}
-
-.list-container {
-    width: 45%;
-    display: flex;
-    flex-direction: column; 
-    flex-wrap: wrap;
-    margin: 20px;
-    padding: 20px;
-    border: solid;
-    border-radius: 5px;
-    align-items: center;
-    
-}
-
-.list-title {
-    display: flex;
-    align-items: center;
-}
-
-
-.food-icon{
-    float: left;
-    width: 2em;
-    height: 2em;
-    padding: 5px;
-}
-
- .content h3 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 25px;
-}
-
-.add-item{
-    width: 15%;
-    margin-bottom:90px;
-}
-
-.integer-input {
-    width: 15%;
-}
-
-button {
-    border-radius: 5px;
-}
-
-/* valid/invalid */
-.close{
-    padding:5px;
-    margin-left: 10px;
-    background-color: rgb(0, 195, 255);
-  }
-
-  .close:hover{
-    background-color: red;
-    color:Black;
-    transition: 0.2s;
-    width: auto;
-
-  }
   
 
-  input:invalid, input:focus:invalid{
-    outline: none;
-    background-color: rgba(243, 107, 109, 0.2);
-  }
- 
- input:valid, input:focus:valid {
-    outline: none;
-    background-color: none;
- }
-
-
-@media (max-width:700px) {
-    h3{
-        align-items: center;
-        justify-content: center;
-    }
-    .list-container{
-        width: 60%;
-        padding: 10px;
-        margin: 10px;
-        /* min-width: 300px; */
-    }
-
-    .add-item, .integer-input{
-        width: calc(20%-20px);
-        margin-bottom: 10px;
-    }
-    button{
-        display: flex;
-        margin-right: auto;
-        margin-left: auto;
-        margin-top: 10px;
-        
-    }
-
-}
 h3 {
     text-align:center;
     margin: 10px;
@@ -230,7 +75,49 @@ input[type="submit"]:active {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.footer {
+    position:relative;
+    border-top-width:thin;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #D3D3D3; /* Change this to the background color you want */
+    color: #fff; /* Change this to the text color you want */
+    text-align: center;
+    margin-top: 10px;
+    
+    
+}
 
+.footer-content {
+    display: flex;
+    padding-top: 5px;
+    padding-bottom:5px;
+    /* justify-content: space-between; */
+    align-items:center;
+    color: #fff;
+}
+
+.footer img {
+    /* margin-bottom: 10px; Add some margin to the logo to separate it from the links */
+    align-items:center;
+}
+.footer .logo{
+  align-items:center;
+
+}
+.footer nav ul {
+    align-items:center;
+    padding: 0;
+    color: #fff;
+}
+
+.footer nav ul li {
+
+    display: inline-flex;
+    margin-right: 100px; /* Add some spacing between the links */
+    color: #fff;
+}
 
 p{
     margin: auto;
