--- a/CISC3610/Form/form.css
+++ b/CISC3610/Form/form.css
@@ -1,5 +1,5 @@
 #body {
-   background-image:url('workplace-with-blue-office-supplies.jpg');
+   background-image:url('heat-7355046_1280.jpg');
    background-repeat: no-repeat;
    background-attachment:fixed;
    background-size: cover;
@@ -9,6 +9,7 @@
    
     position: relative;
     text-align: center;
+    
     margin-top:200px;
     margin-left: 30%;
     margin-right: 30%;
@@ -18,7 +19,7 @@
     border-style:solid ;
     border-radius: 10px;
     padding-bottom: 20px;
-    
+    background-color: rgb(124, 236, 236);
 
 }
 .convert{
