--- a/CISC3610/TempPWA/form2.css
+++ b/CISC3610/TempPWA/form2.css
@@ -10,7 +10,7 @@
     position: relative;
     text-align: center;
     
-    margin-top:200px;
+    margin-top:150px;
     margin-left: 30%;
     margin-right: 30%;
     
@@ -35,4 +35,9 @@
 .kilo{
     padding-top: 0;
     color: black;
+}
+#homepage{
+    font-size: 25px;
+    margin-top: 100px;
+    margin-left: 150px;
 }
